--- a/src/components/ChestViewer/ChestViewer.css
+++ b/src/components/ChestViewer/ChestViewer.css
@@ -9,8 +9,8 @@
 
 /* Image viewer */
 .chest-image-container {
-  max-width: 500px;
-  max-height: 500px;
+  max-width: 200px;
+  max-height: 200px;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -18,7 +18,7 @@
 
 /* Text panel */
 .chest-text-container {
-  max-width: 600px;
-  max-height: 500px;
+  width: 200px;
+  height: 200px;
   overflow-y: auto;
 }
