--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -38,3 +38,10 @@
   object-fit: contain;
   display: block;
 }
+
+.logo-divider {
+  width: 80%;
+  height: 1px;
+  background-color: #c0c0c0;
+  margin: 12px auto;
+}
